--- a/jsTest/index.html
+++ b/jsTest/index.html
@@ -7,7 +7,15 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h1>AI IMAGE GENERATOR</h1>
+    <div id="result">
+      Image will appear here.
+    </div>
+    <form action="">
+      <label for="prompt">Prompt</label>
+      <textarea name="prompt" maxlength="160"></textarea>
+      <button type="submit">Dream</button>  
+    </form>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
